--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -44,8 +44,8 @@ log.global = \\var\\logs\\chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = COMPUTER
-playerTypeBlack = HUMAN
+playerTypeWhite = HUMAN
+playerTypeBlack = COMPUTER
 
 # number of games to play in a row
 numberOfGames = 1
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 900
-timeBlack = 1200
+timeWhite = 3000
+timeBlack = 30
 
 #####################
 # Engine settings   #
@@ -97,9 +97,9 @@ engine.black.searchDepth = 99
 ui.class = fko.chessly.ui.SwingGUI.SwingGUI
 
 ui.showPossibleMoves  = true
-ui.showMoveListWindow = true
-ui.showEngineBlackInfoWindow = true
-ui.showEngineWhiteInfoWindow = true
+ui.showMoveListWindow = false
+ui.showEngineBlackInfoWindow = false
+ui.showEngineWhiteInfoWindow = false
 
 # Colors
 ui.possibleMoveColor      = 115:215:115
