Small changes to BoardPanel

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -57,7 +57,7 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 3000
+timeWhite = 900
 timeBlack = 300
 
 #####################
@@ -97,9 +97,9 @@ engine.black.searchDepth = 99
 ui.class = fko.chessly.ui.SwingGUI.SwingGUI
 
 ui.showPossibleMoves  = true
-ui.showMoveListWindow = false
-ui.showEngineBlackInfoWindow = false
-ui.showEngineWhiteInfoWindow = false
+ui.showMoveListWindow = true
+ui.showEngineBlackInfoWindow = true
+ui.showEngineWhiteInfoWindow = true
 
 # Colors
 ui.possibleMoveColor      = 115:215:115
