--- a/.project
+++ b/.project
@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.eclipse.xtext.ui.shared.xtextBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
@@ -13,12 +18,13 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.xtext.ui.shared.xtextNature</nature>
 	</natures>
 	<linkedResources>
 		<link>
 			<name>Java Source</name>
 			<type>2</type>
-			<location>C:/Program Files (x86)/Java/jdk1.8.0_31/src</location>
+			<location>/Users/fkopp/eclipse/java-mars/Eclipse.app/Contents/MacOS/C::/Program Files (x86)/Java/jdk1.8.0_31/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
