--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -30,7 +30,7 @@
 #####################
 
 ## Start game immediately
-start = true
+start = false
 
 ## Debugging
 debug = false
@@ -44,8 +44,8 @@ log.global = \\var\\logs\\chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = HUMAN
-playerTypeBlack = COMPUTER
+playerTypeWhite = COMPUTER
+playerTypeBlack = HUMAN
 
 # number of games to play in a row
 numberOfGames = 1
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 900
-timeBlack = 300
+timeWhite = 30
+timeBlack = 30
 
 #####################
 # Engine settings   #
@@ -98,6 +98,7 @@ ui.class = fko.chessly.ui.SwingGUI.SwingGUI
 #ui.class = fko.chessly.ui.JavaFX_GUI.JavaFX_GUI
 
 ui.showPossibleMoves  = true
+ui.showLastMove = true
 ui.showMoveListWindow = true
 ui.showEngineBlackInfoWindow = true
 ui.showEngineWhiteInfoWindow = true
