--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -30,7 +30,7 @@
 #####################
 
 ## Start game immediately
-start = false
+start = true
 
 ## Debugging
 debug = false
@@ -44,8 +44,8 @@ log.global = \\var\\logs\\chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = COMPUTER
-playerTypeBlack = HUMAN
+playerTypeWhite = HUMAN
+playerTypeBlack = COMPUTER
 
 # number of games to play in a row
 numberOfGames = 1
@@ -57,7 +57,7 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 30
+timeWhite = 6000
 timeBlack = 30
 
 #####################
