--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -44,11 +44,11 @@ log.global = \\var\\logs\\chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = HUMAN
+playerTypeWhite = COMPUTER
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
-numberOfGames = 1
+numberOfGames = 10
 
 # player names
 nameWhitePlayer = White
@@ -57,7 +57,7 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 6000
+timeWhite = 30
 timeBlack = 30
 
 #####################
