Fixed bug in text area (infoPanel)
Obviously shortening the text in the textarea via Listener is not a good idea. Move shortening to print code.

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -30,7 +30,7 @@
 #####################
 
 ## Start game immediately
-start = false
+start = true
 
 ## Debugging
 debug = false
@@ -48,7 +48,7 @@ playerTypeWhite = COMPUTER
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
-numberOfGames = 1
+numberOfGames = 100
 
 # player names
 nameWhitePlayer = White
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 1200
-timeBlack = 1200
+timeWhite = 20
+timeBlack = 20
 
 #####################
 # Engine settings   #
