--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -44,11 +44,11 @@ log.global = \\var\\logs\\chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = COMPUTER
+playerTypeWhite = HUMAN
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
-numberOfGames = 100
+numberOfGames = 1
 
 # player names
 nameWhitePlayer = White
@@ -94,8 +94,8 @@ engine.black.searchDepth = 99
 #####################
 
 # set UI class
-ui.class = fko.chessly.ui.SwingGUI.SwingGUI
-#ui.class = fko.chessly.ui.JavaFX_GUI.JavaFX_GUI
+#ui.class = fko.chessly.ui.SwingGUI.SwingGUI
+ui.class = fko.chessly.ui.JavaFX_GUI.JavaFX_GUI
 
 ui.showPossibleMoves  = true
 ui.showLastMove = true
