--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -30,7 +30,7 @@
 #####################
 
 ## Start game immediately
-start = false
+start = true
 
 ## Debugging
 debug = false
@@ -44,11 +44,11 @@ log.global = \\var\\logs\\chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = HUMAN
+playerTypeWhite = COMPUTER
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
-numberOfGames = 1
+numberOfGames = 100
 
 # player names
 nameWhitePlayer = White
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 600
-timeBlack = 300
+timeWhite = 30
+timeBlack = 30
 
 #####################
 # Engine settings   #
