--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -30,7 +30,7 @@
 #####################
 
 ## Start game immediately
-start = true
+start = false
 
 ## Debugging
 debug = false
@@ -44,11 +44,11 @@ log.global = \\var\\logs\\chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = COMPUTER
+playerTypeWhite = HUMAN
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
-numberOfGames = 100
+numberOfGames = 1
 
 # player names
 nameWhitePlayer = White
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 30
-timeBlack = 30
+timeWhite = 600
+timeBlack = 600
 
 #####################
 # Engine settings   #
