--- a/deploy/properties/chessly/chessly.properties
+++ b/deploy/properties/chessly/chessly.properties
@@ -1,33 +1,36 @@
-# <p>GPL Dislaimer</p>
-# * <p>
-# * "Chessly by Frank Kopp"
-# * Copyright (c) 2003 -2016 Frank Kopp
-# * mail-to:frank@familie-kopp.de
-# *
-# * This file is part of "Chessly by Frank Kopp".
-# *
-# * "Chessly by Frank Kopp" is free software; you can redistribute it and/or modify
-# * it under the terms of the GNU General Public License as published by
-# * the Free Software Foundation; either version 2 of the License, or
-# * (at your option) any later version.
-# *
-# * "Chessly by Frank Kopp" is distributed in the hope that it will be useful,
-# * but WITHOUT ANY WARRANTY; without even the implied warranty of
-# * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# * GNU General Public License for more details.
-# *
-# * You should have received a copy of the GNU General Public License
-# * along with "Chessly by Frank Kopp"; if not, write to the Free Software
-# * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-# * </p>
-# *
+##
+ # The MIT License (MIT)
+ #
+ # "Chessly by Frank Kopp"
+ #
+ # mail-to:frank@familie-kopp.de
+ #
+ # Copyright (c) ${year} Frank Kopp
+ #
+ # Permission is hereby granted, free of charge, to any person obtaining a copy of
+ # this software and associated documentation files (the "Software"), to deal in the
+ # Software without restriction, including without limitation the rights to use, copy,
+ # modify, merge, publish, distribute, sublicense, and/or sell copies of the Software,
+ # and to permit persons to whom the Software is furnished to do so, subject to the
+ # following conditions:
+ #
+ # The above copyright notice and this permission notice shall be included in all copies
+ # or substantial portions of the Software.
+ #
+ # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+ # INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
+ # PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
+ # FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
+ # OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+ # DEALINGS IN THE SOFTWARE.
+ #
 
 #####################
 # Startup settings  #
 #####################
 
 ## Start game immediately
-start = true
+start = false
 
 ## Debugging
 debug = false
@@ -54,7 +57,7 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 6000
+timeWhite = 600
 timeBlack = 600
 
 #####################
@@ -91,11 +94,11 @@ engine.black.searchDepth = 99
 #####################
 
 # set UI class
-#ui.class = fko.chessly.ui.Swing.SwingUI
-#ui.class = fko.chessly.ui.TextUI.TextUI
-ui.class = fko.chessly.ui.SwingGUI.SwingGUI
+#ui.class = fko.chessly.ui.SwingGUI.SwingGUI
+ui.class = fko.chessly.ui.JavaFX_GUI.JavaFX_GUI
 
 ui.showPossibleMoves  = true
+ui.showLastMove = true
 ui.showMoveListWindow = true
 ui.showEngineBlackInfoWindow = true
 ui.showEngineWhiteInfoWindow = true
