Smoke tested with JavaFX UI - good so far
Next - implement ObservableEngine interface

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -30,7 +30,7 @@
 #####################
 
 ## Start game immediately
-start = false
+start = true
 
 ## Debugging
 debug = false
@@ -44,11 +44,11 @@ log.global = \\var\\logs\\chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = HUMAN
+playerTypeWhite = COMPUTER
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
-numberOfGames = 1
+numberOfGames = 10
 
 # player names
 nameWhitePlayer = White
@@ -57,19 +57,12 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 600
-timeBlack = 600
+timeWhite = 30
+timeBlack = 30
 
 #####################
 # Engine settings   #
 #####################
-
-# default computer player engine
-# fko.chessly.player.computer.Adam.AdamEngine
-# fko.chessly.player.computer.Random.RandomEngine
-# fko.chessly.player.computer.NegaMax.NegaMax
-# fko.chessly.player.computer.NegaMax_v2.NegaMax_v2
-# fko.chessly.player.computer.PulseEngine.PulseEngine
 
 # number of threads used in tree search (when supported by engine)
 engine.numberOfThreads = 1
@@ -81,12 +74,18 @@ engine.cacheEnabled = true
 engine.nodesCacheSize  = 64
 engine.boardsCacheSize = 64
 
+# default computer player engine
+# fko.chessly.player.computer.Adam.AdamEngine
+# fko.chessly.player.computer.Random.RandomEngine
+# fko.chessly.player.computer.PulseEngine.PulseEngine_v2
+# fko.chessly.player.computer.FluxEngine.FluxEngine
+
 # WHITE
 whiteEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
 engine.white.searchDepth = 99
 
 # BLACK
-blackEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
+blackEngine.class = fko.chessly.player.computer.FluxEngine.FluxEngine
 engine.black.searchDepth = 99
 
 #####################
