Added already available engine infos to ObservableEngine interface of FluxEngine
Also renamed fields in Search (prefix _)

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 30
-timeBlack = 30
+timeWhite = 600
+timeBlack = 600
 
 #####################
 # Engine settings   #
@@ -81,7 +81,7 @@ engine.boardsCacheSize = 64
 # fko.chessly.player.computer.FluxEngine.FluxEngine
 
 # WHITE
-whiteEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
+whiteEngine.class = fko.chessly.player.computer.FluxEngine.FluxEngine
 engine.white.searchDepth = 99
 
 # BLACK
