Implemented Pondering - more testing to do

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -45,7 +45,7 @@ log.global = \\var\\logs\\chessly.log
 # set player type to
 #   HUMAN, COMPUTER
 playerTypeWhite = COMPUTER
-playerTypeBlack = COMPUTER
+playerTypeBlack = HUMAN
 
 # number of games to play in a row
 numberOfGames = 100
@@ -58,7 +58,7 @@ nameBlackPlayer = Black
 timedGame = true
 # time in sec
 timeWhite = 60
-timeBlack = 60
+timeBlack = 6000
 
 #####################
 # Engine settings   #
@@ -85,7 +85,7 @@ whiteEngine.class = fko.chessly.player.computer.FluxEngine.FluxEngine
 engine.white.searchDepth = 99
 
 # BLACK
-blackEngine.class = fko.chessly.player.computer.FluxEngine.FluxEngine
+blackEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
 engine.black.searchDepth = 99
 
 #####################
