--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -85,7 +85,7 @@ whiteEngine.class = fko.chessly.player.computer.FluxEngine.FluxEngine
 engine.white.searchDepth = 99
 
 # BLACK
-blackEngine.class = fko.chessly.player.computer.FluxEngine.FluxEngine
+blackEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
 engine.black.searchDepth = 99
 
 #####################
