--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -81,7 +81,7 @@ engine.boardsCacheSize = 64
 # fko.chessly.player.computer.FluxEngine.FluxEngine
 
 # WHITE
-whiteEngine.class = fko.chessly.player.computer.FluxEngine.FluxEngine
+whiteEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
 engine.white.searchDepth = 99
 
 # BLACK
