Basic Search works - clean up next

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -40,7 +40,7 @@ debug = false
 #####################
 
 # Logging
-log.global = \\var\\logs\\chessly.log
+log.global = /var/logs/chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
