--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -55,7 +55,7 @@ nameWhitePlayer = White
 nameBlackPlayer = Black
 
 # timed game
-timedGame = true
+timedGame = false
 # time in sec
 timeWhite = 120
 timeBlack = 120
@@ -82,11 +82,11 @@ engine.boardsCacheSize = 64
 
 # WHITE
 whiteEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
-engine.white.searchDepth = 99
+engine.white.searchDepth = 4
 
 # BLACK
 blackEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
-engine.black.searchDepth = 99
+engine.black.searchDepth = 4
 
 #####################
 # UI settings       #
