Basic time control implemented

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -55,10 +55,10 @@ nameWhitePlayer = White
 nameBlackPlayer = Black
 
 # timed game
-timedGame = false
+timedGame = true
 # time in sec
-timeWhite = 120
-timeBlack = 120
+timeWhite = 15
+timeBlack = 15
 
 #####################
 # Engine settings   #
@@ -82,11 +82,11 @@ engine.boardsCacheSize = 64
 
 # WHITE
 whiteEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
-engine.white.searchDepth = 4
+engine.white.searchDepth = 99
 
 # BLACK
 blackEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
-engine.black.searchDepth = 4
+engine.black.searchDepth = 99
 
 #####################
 # UI settings       #
