--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,14 @@ $RECYCLE.BIN/
 /nbproject/private/
 /build/
 nbproject/
+Chessly-native/
+Chessly_jetpdb/
+Chessly_trial_run/
+Chessly.exe
+Chessly.jpn
+Chessly.log
+Chessly.prj
+Chessly.startup
+Chessly.vaz
+build_Chessly.bat
+run_Chessly.bat
