Pondering implemented - now testing

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -45,7 +45,7 @@ log.global = /var/logs/chessly.log
 # set player type to
 #   HUMAN, COMPUTER
 playerTypeWhite = COMPUTER
-playerTypeBlack = COMPUTER
+playerTypeBlack = HUMAN
 
 # number of games to play in a row
 numberOfGames = 100
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 180
-timeBlack = 180
+timeWhite = 200
+timeBlack = 200
 
 #####################
 # Engine settings   #
