--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -45,7 +45,7 @@ log.global = /var/logs/chessly.log
 # set player type to
 #   HUMAN, COMPUTER
 playerTypeWhite = COMPUTER
-playerTypeBlack = HUMAN
+playerTypeBlack = COMPUTER
 
 # number of games to play in a row
 numberOfGames = 100
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 200
-timeBlack = 200
+timeWhite = 180
+timeBlack = 180
 
 #####################
 # Engine settings   #
@@ -71,8 +71,8 @@ engine.numberOfThreads = 1
 engine.cacheEnabled = true
 # cache size in MB 
 # (HINT: times 2 if engine against engine)
-engine.nodesCacheSize  = 64
-engine.boardsCacheSize = 64
+engine.nodesCacheSize  = 4
+engine.boardsCacheSize = 4
 
 # default computer player engine
 # fko.chessly.player.computer.Adam.AdamEngine
@@ -85,7 +85,7 @@ whiteEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
 engine.white.searchDepth = 99
 
 # BLACK
-blackEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
+blackEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
 engine.black.searchDepth = 99
 
 #####################
