--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 180
-timeBlack = 180
+timeWhite = 60
+timeBlack = 60
 
 #####################
 # Engine settings   #
@@ -85,7 +85,7 @@ whiteEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
 engine.white.searchDepth = 99
 
 # BLACK
-blackEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
+blackEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
 engine.black.searchDepth = 99
 
 #####################
