--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -48,7 +48,7 @@ playerTypeWhite = COMPUTER
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
-numberOfGames = 100
+numberOfGames = 1000
 
 # player names
 nameWhitePlayer = White
@@ -57,14 +57,14 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 900
-timeBlack = 900
+timeWhite = 15
+timeBlack = 15
 
 #####################
 # Engine settings   #
 #####################
 
-# number of threads used in tree search (when supported by engine)
+# number of threads used in tree search (if supported by engine)
 engine.numberOfThreads = 1
 
 # cache enabled?
