--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 1800 
-timeBlack = 1800
+timeWhite = 60 
+timeBlack = 60
 
 #####################
 # Engine settings   #
@@ -71,8 +71,8 @@ engine.numberOfThreads = 1
 engine.cacheEnabled = true
 # cache size in MB 
 # (HINT: times 2 if engine against engine)
-engine.nodesCacheSize  = 16
-engine.boardsCacheSize = 16
+engine.nodesCacheSize  = 64
+engine.boardsCacheSize = 64
 
 # default computer player engine
 # fko.chessly.player.computer.Adam.AdamEngine
@@ -85,7 +85,7 @@ whiteEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
 engine.white.searchDepth = 99
 
 # BLACK
-blackEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
+blackEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
 engine.black.searchDepth = 99
 
 #####################
