Cosmetics and game settings

--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -44,7 +44,7 @@ log.global = /var/logs/chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = COMPUTER
+playerTypeWhite = HUMAN
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
@@ -58,7 +58,7 @@ nameBlackPlayer = Black
 timedGame = true
 # time in sec
 timeWhite = 600 
-timeBlack = 600
+timeBlack = 300
 
 #####################
 # Engine settings   #
@@ -85,7 +85,7 @@ whiteEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
 engine.white.searchDepth = 99
 
 # BLACK
-blackEngine.class = fko.chessly.player.computer.PulseEngine.PulseEngine_v2
+blackEngine.class = fko.chessly.player.computer.Omega.OmegaEngine
 engine.black.searchDepth = 99
 
 #####################
