--- a/properties/chessly/chessly.properties
+++ b/properties/chessly/chessly.properties
@@ -44,7 +44,7 @@ log.global = /var/logs/chessly.log
 
 # set player type to
 #   HUMAN, COMPUTER
-playerTypeWhite = HUMAN
+playerTypeWhite = COMPUTER
 playerTypeBlack = COMPUTER
 
 # number of games to play in a row
@@ -57,8 +57,8 @@ nameBlackPlayer = Black
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 600 
-timeBlack = 300
+timeWhite = 60 
+timeBlack = 60
 
 #####################
 # Engine settings   #
