--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="fko/chessly/player/computer/FluxEngine/Flux.java|fko/chessly/player/computer/FluxEngine/Main.java" kind="src" path="src"/>
+	<classpathentry kind="src" path="images"/>
+	<classpathentry kind="src" path="properties"/>
+	<classpathentry including="ser/" kind="src" path="book"/>
 	<classpathentry excluding="fko/chessly/player/computer/FluxEngine/" kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
