--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="fko/chessly/player/computer/FluxEngine/" kind="src" path="test"/>
+	<classpathentry excluding="fko/chessly/player/computer/PulseEngine/" kind="src" path="src"/>
+	<classpathentry excluding="fko/chessly/player/computer/FluxEngine/|fko/chessly/player/computer/PulseEngine/" kind="src" path="test"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
