--- a/src/main/resources/properties/chessly.properties
+++ b/src/main/resources/properties/chessly.properties
@@ -94,7 +94,7 @@ engine.black.searchDepth = 99
 
 # set UI class
 #ui.class = fko.chessly.ui.SwingGUI.SwingGUI
-ui.class = fko.chessly.ui.JavaFX_GUI.JavaFX_GUI
+ui.class = fko.chessly.ui.JavaFX_GUI.MainView
 
 ui.showPossibleMoves  = true
 ui.showLastMove = true
