Depracted Chessly Logger - use slf4j instead

--- a/src/main/resources/properties/chessly.properties
+++ b/src/main/resources/properties/chessly.properties
@@ -39,7 +39,7 @@ debug = false
 # GAME settings     #
 #####################
 
-# Logging
+# Logging (deprecated)
 log.global = /var/logs/chessly.log
 
 # set player type to
@@ -71,8 +71,8 @@ engine.numberOfThreads = 1
 engine.cacheEnabled = true
 # cache size in MB 
 # (HINT: times 2 if engine against engine)
-engine.nodesCacheSize  = 64
-engine.boardsCacheSize = 64
+engine.nodesCacheSize  = 256
+engine.boardsCacheSize = 256
 
 # default computer player engine
 # fko.chessly.player.computer.Adam.AdamEngine
