GameHistory prototype working

--- a/src/main/resources/properties/chessly.properties
+++ b/src/main/resources/properties/chessly.properties
@@ -51,14 +51,14 @@ playerTypeBlack = COMPUTER
 numberOfGames = 100
 
 # player names
-nameWhitePlayer = White
-nameBlackPlayer = Black
+nameWhitePlayer = Chessly White
+nameBlackPlayer = Chessly Black
 
 # timed game
 timedGame = true
 # time in sec
-timeWhite = 120 
-timeBlack = 120
+timeWhite = 10 
+timeBlack = 10
 
 #####################
 # Engine settings   #
